--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 @import-normalize;
 
+@import './components/Button/Button.css';
+@import './components/Input/Input.css';
+@import './components/Label/Label.css';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
