--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -1,5 +1,13 @@
 .input {
-  width: 200px;
+  min-width: 200px;
+  width: 80%;
   border: none;
   border-bottom: 1px solid #346c39;
+  cursor: pointer;
+  padding: 10px;
+}
+
+.submit_input {
+  background-color: #346c39;
+  border-radius: inherit;
 }
