--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,14 @@
 @import './components/Input/Input.css';
 @import './components/Label/Label.css';
 
+:root {
+  --cambridge-blue: #809885ff;
+  --platinum: #E3E3E3ff;
+  --silver: #B1B2B1ff;
+  --dark-moss-green: #3A5F25ff;
+  --antiflash-white: #EBEBEBff;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -16,4 +24,15 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+.wrapper {
+  max-width: 1200px;
+  margin: 0 auto;
 }
