Feat/implement_login_page_styles (#9)
* feat: implement basic login page layout

* feat: implement email validation

* feat: start implementing password validation

* fix: change login page styles, set up modern normalize

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import-normalize;
+@import '../node_modules/modern-normalize/modern-normalize.css';
 
 @import './components/Button/Button.css';
 @import './components/Input/Input.css';
@@ -26,10 +27,9 @@ code {
     monospace;
 }
 
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+#root {
+  min-width: 100%;
+  min-height: 100vh;
 }
 
 .wrapper {
