--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,8 @@
   --silver: #B1B2B1ff;
   --dark-moss-green: #3A5F25ff;
   --antiflash-white: #EBEBEBff;
+  --background-color: rgba(248, 249, 244, 0.8);
+  --error-message-color: #DA5E5E;
 }
 
 body {
