--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -5,9 +5,36 @@
   border-bottom: 1px solid #346c39;
   cursor: pointer;
   padding: 10px;
+  border-radius: 10px;
 }
 
 .submit_input {
-  background-color: #346c39;
+  background-color: var(--dark-moss-green);
   border-radius: inherit;
+  color: var(--antiflash-white);
+  transition: all 0.3s ease-in-out;
+}
+
+.submit_input:hover {
+  background-color: var(--platinum);
+  color: var(--dark-moss-green);
+}
+
+.show_password_input {
+  width: 30px;
+  height: 30px;
+  min-width: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  appearance: none;
+  border: none;
+  background-image: url(../../assets/icons/seen.png);
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.show_password_input:checked {
+  background-image: url(../../assets/icons/unseen.png);
 }
