--- a/src/components/Login/LoginForm.css
+++ b/src/components/Login/LoginForm.css
@@ -1,12 +1,18 @@
 .login_form {
-    min-width: 400px;
-    padding: 2%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    background-color: rgba(248, 249, 244, 0.8);
-    border: 1px solid #F8F9F4;
-    border-radius: 10px;
+  min-width: 400px;
+  padding: 2%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  background-color: var(--background-color);
+  border: 1px solid var(--background-color);
+  border-radius: 10px;
+}
+
+.error_message {
+  max-width: 80%;
+  text-align: center;
+  color: var(--error-message-color);
 }
