--- a/src/index.css
+++ b/src/index.css
@@ -7,19 +7,18 @@
 
 :root {
   --cambridge-blue: #809885ff;
-  --platinum: #E3E3E3ff;
-  --silver: #B1B2B1ff;
-  --dark-moss-green: #3A5F25ff;
-  --antiflash-white: #EBEBEBff;
+  --platinum: #e3e3e3ff;
+  --silver: #b1b2b1ff;
+  --dark-moss-green: #3a5f25ff;
+  --antiflash-white: #ebebebff;
+  --background-color: rgba(248, 249, 244, 0.8);
+  --error-message-color: #da5e5e;
 }
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Montserrat", sans-serif;
+
 }
 
 code {
