feat: added style for header

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
   --antiflash-white: #ebebebff;
   --background-color: rgba(248, 249, 244, 0.8);
   --error-message-color: #da5e5e;
+  --fern-green: #587752ff;
 }
 
 body {
