--- a/src/components/AboutSection/AboutSection.css
+++ b/src/components/AboutSection/AboutSection.css
@@ -1,7 +1,12 @@
+.about {
+  background-image: url('../../assets/images/backgrounds/green-texture.jpg');
+  background-size: cover;
+}
+
 .about-wrapper {
   padding: 100px 50px;
-  background-image: url('../../assets/green-texture.jpg');
-  background-size: cover;
+
+
 }
 
 .about-container {
