--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -16,7 +16,6 @@
 
 .header-link {
   text-decoration: none;
-
   color: #000;
   font-size: 20px;
   font-weight: 500;
@@ -31,4 +30,10 @@
   line-height: 24px;
   letter-spacing: 0%;
   text-decoration: none;
+}
+
+@media screen and (max-width: 600px) {
+  .header-link {
+    font-size: 15px;
+  }
 }
