feat:added image and style for not found page

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,7 @@
 .header {
   max-width: 1200px;
   height: 10vh;
+  min-height: 70px;
   padding: 20px;
   display: flex;
   justify-content: space-between;
