--- a/src/pages/NotFoundPage/NotFoundPage.css
+++ b/src/pages/NotFoundPage/NotFoundPage.css
@@ -1,5 +1,5 @@
-body {
-  background-color: var(--cambridge-blue);
+.not-found {
+  background-color: var(--silver);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8,15 +8,36 @@ body {
 
 .container {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
-h1 {
+.not-fount-title {
   font-size: 3rem;
   margin-bottom: 1rem;
   color: var(--error-message-color);
 }
 
-p {
+.not-fount-text {
   font-size: 1.2rem;
   color: #434a50;
+}
+
+.not-found-link {
+  color: #007bff;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.not-found-link:hover {
+  text-decoration: underline;
+}
+
+.not-found-image {
+  min-width: 500px;
+  min-height: 500px;
+  background-image: url('./not-found-image.png');
+  background-size: 100%;
 }
