Feat/added style for main page (#24)
* feat:added style for main page

* feat: added media for main page

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -53,3 +53,9 @@
   letter-spacing: 0%;
   text-decoration: none;
 }
+
+@media screen and (max-width: 600px) {
+  .header-link {
+    font-size: 15px;
+  }
+}
