--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -1,23 +1,28 @@
 .hero {
   background-color: var(--platinum);
+  background-image: url('../../assets/images/backgrounds/hero.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 90vh;
+  padding: 0 20px;
 }
 
 .hero-wrapper {
   position: relative;
-  padding-left: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 85vh;
-
-  background-image: url('../../assets/hero.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
+  max-width: 1400px;
+  margin: 0 auto;
+  height: 100%;
 }
 
 .hero-title {
+  text-align: center;
   max-width: 600px;
   color: rgb(0, 0, 0);
+  margin: 0 auto;
   font-size: 70px;
   line-height: 110px;
   font-weight: 800;
@@ -28,4 +33,28 @@
   font-size: 120px;
   font-weight: 800;
   letter-spacing: 0%;
+}
+
+
+@media screen and (max-width: 1000px) {
+  .hero-title--high {
+    font-size: 100px;
+  }
+
+  .hero-title {
+    font-size: 60px;
+    line-height: 80px;
+  }
+}
+
+@media screen and (max-width: 560px) {
+
+  .hero-title {
+    font-size: 40px;
+    line-height: 60px;
+  }
+
+  .hero-title--high {
+    font-size: 70px;
+  }
 }
