--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -30,8 +30,7 @@
 }
 
 .sign-in-link,
-.sign-up-link,
-.log_out_button {
+.sign-up-link {
   background-color: transparent;
   border: 2px solid #fff;
   color: #fff;
@@ -42,11 +41,27 @@
 }
 
 .sign-in-link:hover,
-.sign-up-link:hover,
-.log_out_button:hover {
+.sign-up-link:hover {
   background-color: #fff;
   color: var(--fern-green);
   ;
+}
+
+.log_out_button {
+  background-color: #fff;
+  border: 2px solid var(--fern-green);
+  color: var(--fern-green);
+  padding: 10px 20px;
+  border-radius: 5px;
+  transition: background-color 0.3s, color 0.3s;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.log_out_button:hover {
+  background-color: var(--fern-green);
+  border: 2px solid #fff;
+  color: #fff;
 }
 
 .header-logo {
