--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -58,3 +58,10 @@
     font-size: 70px;
   }
 }
+
+@media screen and (max-width: 405px) {
+  .hero-title {
+    font-size: 38px;
+    line-height: 60px;
+  }
+}
