--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -58,6 +58,62 @@
   text-decoration: none;
 }
 
+.header-nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 70%;
+  z-index: 1000;
+}
+
+.header-burger {
+  display: none;
+  z-index: 1000;
+}
+
+.header-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  z-index: 999;
+}
+
+.no-scroll {
+  overflow: hidden;
+}
+
+@media screen and (max-width: 758px) {
+  .header-burger {
+    display: block;
+  }
+
+  .header-nav {
+    position: fixed;
+    top: 9vh;
+    right: -100%;
+    background-color: var(--fern-green);
+    width: 300px;
+    height: 91vh;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: start;
+    gap: 30px;
+    padding: 20px 0;
+    transition: right .5s ease-in-out;
+  }
+
+  .header-nav.open {
+    right: 0;
+  }
+
+  .header-overlay.open {
+    display: block;
+  }
+}
+
 @media screen and (max-width: 600px) {
   .header-link {
     font-size: 15px;
