--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,8 +3,8 @@
 }
 
 .header-wrapper {
-  height: 10vh;
-  min-height: 70px;
+  position: relative;
+  height: 80px;
   max-width: 1200px;
   padding: 20px;
   display: flex;
@@ -107,9 +107,17 @@
     display: block;
   }
 
+  .header-links {
+    justify-content: space-between;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+    font-size: 30px;
+  }
+
   .header-nav {
     position: fixed;
-    top: 9vh;
+    top: 80px;
     right: -100%;
     background-color: var(--fern-green);
     width: 300px;
@@ -117,8 +125,8 @@
     flex-direction: column-reverse;
     align-items: center;
     justify-content: start;
-    gap: 30px;
-    padding: 20px 0;
+    gap: 40px;
+    padding: 30px 0;
     transition: right .5s ease-in-out;
   }
 
