--- a/src/components/AboutSection/AboutSection.css
+++ b/src/components/AboutSection/AboutSection.css
@@ -28,3 +28,25 @@
   background-color: red;
   cursor: pointer;
 }
+
+
+@media (max-width: 700px) {
+  .about-container {
+    font-size: 24px;
+  }
+}
+
+@media (max-width: 500px) {
+  .about-wrapper {
+    padding: 10% 5%;
+  }
+}
+
+@media (max-width: 400px) {
+  .about-container {
+    font-size: 16px;
+  }
+}
+
+
+
