--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,38 @@
 @import-normalize;
+@import '../node_modules/modern-normalize/modern-normalize.css';
+
+@import './components/Button/Button.css';
+@import './components/Input/Input.css';
+@import './components/Label/Label.css';
+
+:root {
+  --cambridge-blue: #809885ff;
+  --platinum: #e3e3e3ff;
+  --silver: #b1b2b1ff;
+  --dark-moss-green: #3a5f25ff;
+  --antiflash-white: #ebebebff;
+  --background-color: rgba(248, 249, 244, 0.8);
+  --error-message-color: #da5e5e;
+  --fern-green: #587752ff;
+}
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Montserrat", sans-serif;
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#root {
+  min-width: 100%;
+  min-height: 100vh;
+}
+
+.wrapper {
+  max-width: 1200px;
+  margin: 0 auto;
 }
