--- a/src/components/ProductList/ProductList.css
+++ b/src/components/ProductList/ProductList.css
@@ -2,4 +2,9 @@
   padding: 40px;
   background-color: var(--cambridge-blue);
   min-height: calc(100vh - 80px);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 30px;
+  justify-content: center;
 }
