--- a/src/pages/UserProfilePage/UserProfilePage.css
+++ b/src/pages/UserProfilePage/UserProfilePage.css
@@ -19,6 +19,9 @@
 .user-profile_fieldset {
   padding: 20px;
   width: 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .field-wrapper {
@@ -34,4 +37,19 @@
 .address_button {
   width: 100px;
   margin: 10px auto 0;
+}
+
+.default-address {
+  background-color: var(--cambridge-blue);
+  order: -1;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 5px 0;
+}
+
+.default-address-label {
+  padding-left: 10px;
+  color: var(--background-color);
 }
