--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -1,5 +1,5 @@
 .card {
-  max-width: 300px;
+  width: 250px;
   display: flex;
   flex-direction: column;
   gap: 12px;
@@ -25,7 +25,7 @@
 
 .card-descr {
   color: rgba(30, 30, 30, 0.5);
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 500;
   line-height: 27px;
   letter-spacing: 0%;
