--- a/src/pages/NotFoundPage/NotFoundPage.css
+++ b/src/pages/NotFoundPage/NotFoundPage.css
@@ -36,8 +36,16 @@
 }
 
 .not-found-image {
-  min-width: 500px;
-  min-height: 500px;
+  width: 500px;
+  height: 500px;
   background-image: url('./not-found-image.png');
   background-size: 100%;
+}
+
+@media screen and (max-width: 550px) {
+  .not-found-image {
+    margin: 0 auto;
+    width: 300px;
+    height: 300px;
+  }
 }
