--- a/src/components/CategorySidebar/CategorySidebar.css
+++ b/src/components/CategorySidebar/CategorySidebar.css
@@ -1,8 +1,15 @@
 .category-sidebar {
-  min-width: 200px;
+  min-width: 250px;
+  border-radius: 12px;
   padding: 20px;
   background-color: var(--fern-green);
   color: #fff;
+  margin: 30px 0 0 30px;
+  position: sticky;
+  top: 30px;
+  bottom: 30px;
+  max-height: calc(100vh - 140px);
+  overflow-y: auto;
 }
 
 .sidebar-title {
@@ -10,15 +17,28 @@
   font-size: 20px;
   font-weight: 500;
   line-height: 24px;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 .category-sidebar ul {
   list-style-type: none;
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
-.category-sidebar li {
-  cursor: pointer;
-  margin-bottom: 10px;
-  color: blue;
+.main-category {
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 24px;
+  text-transform: capitalize;
+}
+
+.subcategory {
+  font-size: 20px;
+  text-transform: capitalize;
+  line-height: 24px;
+  padding-left: 30px;
 }
