--- a/src/pages/catalog/CatalogPage.css
+++ b/src/pages/catalog/CatalogPage.css
@@ -1,5 +1,9 @@
 .catalog-page {
   background-color: var(--cambridge-blue);
   display: flex;
-  height: calc(100vh - 80px);
+  min-height: calc(100vh - 80px);
+}
+
+.main-content {
+  width: 100%;
 }
