--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -25,8 +25,27 @@
 
 .card-descr {
   color: rgba(30, 30, 30, 0.5);
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 500;
   line-height: 27px;
   letter-spacing: 0%;
+  margin-bottom: 10px;
+}
+
+.price-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between
+}
+
+.price-old {
+  font-size: 24px;
+  color: #999;
+  text-decoration: line-through;
+}
+
+.price-new {
+  font-size: 24px;
+  color: #e74c3c;
+  font-weight: bold;
 }
