--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -30,3 +30,32 @@
   line-height: 27px;
   letter-spacing: 0%;
 }
+
+.detailes_link {
+  display: block;
+  max-width: 40%;
+  margin-top: 15px;
+  color: var(--dark-moss-green);
+  text-decoration: none;
+  position: relative;
+}
+
+.detailes_link::after {
+  display: inline-block;
+  content: '';
+  width: 100%;
+  height: 1px;
+  position: absolute;
+  left: 0;
+  bottom: -4px;
+  transform: scale(0);
+  transform-origin: center;
+  background-color: var(--dark-moss-green);
+  opacity: 0;
+  transition: 0.3s;
+}
+
+.detailes_link:hover::after {
+  transform: scale(1);
+  opacity: 1;
+}
