--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -31,7 +31,7 @@
   letter-spacing: 0%;
 }
 
-.detailes_link {
+.details_link {
   display: block;
   max-width: 40%;
   margin-top: 15px;
@@ -40,7 +40,7 @@
   position: relative;
 }
 
-.detailes_link::after {
+.details_link::after {
   display: inline-block;
   content: '';
   width: 100%;
@@ -55,7 +55,7 @@
   transition: 0.3s;
 }
 
-.detailes_link:hover::after {
+.details_link:hover::after {
   transform: scale(1);
   opacity: 1;
 }
