--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -29,6 +29,36 @@
   font-weight: 500;
   line-height: 27px;
   letter-spacing: 0%;
+}
+
+.details_link {
+  display: block;
+  max-width: 40%;
+  margin-top: 15px;
+  color: var(--dark-moss-green);
+  text-decoration: none;
+  position: relative;
+}
+
+.details_link::after {
+  display: inline-block;
+  content: '';
+  width: 100%;
+  height: 1px;
+  position: absolute;
+  left: 0;
+  bottom: -4px;
+  transform: scale(0);
+  transform-origin: center;
+  background-color: var(--dark-moss-green);
+  opacity: 0;
+  transition: 0.3s;
+}
+
+.details_link:hover::after {
+  transform: scale(1);
+  opacity: 1;
+}
   margin-bottom: 10px;
 }
 
