--- a/src/components/CategorySidebar/CategorySidebar.css
+++ b/src/components/CategorySidebar/CategorySidebar.css
@@ -2,7 +2,7 @@
   min-width: 250px;
   border-radius: 12px;
   padding: 20px;
-  background-color: var(--fern-green);
+  background-color: rgba(88, 119, 82, 0.5);
   color: #fff;
   margin: 30px 0 0 30px;
   position: sticky;
@@ -19,6 +19,8 @@
   line-height: 24px;
   text-align: center;
   margin-bottom: 20px;
+  text-decoration: underline;
+  cursor: default;
 }
 
 .category-sidebar ul {
@@ -34,6 +36,7 @@
   font-weight: 500;
   line-height: 24px;
   text-transform: capitalize;
+  cursor: default;
 }
 
 .subcategory {
@@ -41,4 +44,18 @@
   text-transform: capitalize;
   line-height: 24px;
   padding-left: 30px;
+}
+
+.subcategory {
+  cursor: pointer;
+}
+
+.subcategory:hover {
+  font-weight: bold;
+  transform: scale(1.1);
+}
+
+.category-sidebar .category-item.selected {
+  font-weight: bold;
+  transform: scale(1.1);
 }
