--- a/src/components/CategorySidebar/CategorySidebar.css
+++ b/src/components/CategorySidebar/CategorySidebar.css
@@ -2,7 +2,7 @@
   min-width: 250px;
   border-radius: 12px;
   padding: 20px;
-  background-color: var(--fern-green);
+  background-color: rgba(88, 119, 82, 0.5);
   color: #fff;
   margin: 30px 0 0 30px;
   position: sticky;
@@ -14,19 +14,37 @@
 
 .sidebar-title {
   margin-bottom: 10px;
-  font-size: 20px;
+  font-size: 24px;
   font-weight: 500;
   line-height: 24px;
   text-align: center;
   margin-bottom: 20px;
+  cursor: default;
+  text-transform: uppercase;
+  color: var(--dark-moss-green);
 }
 
-.category-sidebar ul {
+.category-container {
   list-style-type: none;
-  padding: 0;
   display: flex;
-  flex-direction: column;
   gap: 20px;
+  flex-direction: column;
+  padding: 0;
+}
+
+.category-items {
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+}
+
+
+
+.subcategory,
+.main-category {
+  cursor: pointer;
+  padding: 10px;
+  border-radius: 12px;
 }
 
 .main-category {
@@ -34,11 +52,25 @@
   font-weight: 500;
   line-height: 24px;
   text-transform: capitalize;
+  list-style-type: none;
+  text-transform: uppercase;
 }
 
 .subcategory {
   font-size: 20px;
   text-transform: capitalize;
   line-height: 24px;
-  padding-left: 30px;
+  padding-left: 40px;
+  list-style-type: none;
+}
+
+.subcategory:hover,
+.main-category:hover {
+  font-weight: bold;
+  transform: scale(1.1);
+}
+
+.subcategory.selected,
+.main-category.selected {
+  background-color: var(--dark-moss-green);
 }
