--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -1,26 +1,36 @@
 .card {
   width: 300px;
+  max-height: 650px;
   display: flex;
   flex-direction: column;
   gap: 12px;
   background-color: #fff;
   border-radius: 12px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .card-info {
-  padding: 20px;
+  flex-grow: 1;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .card-image {
   width: 100%;
+  height: 300px;
   border-radius: 12px;
+  object-fit: cover;
 }
 
 .card-title {
+  cursor: default;
   font-size: 18px;
   font-weight: 500;
   line-height: 27px;
   letter-spacing: 0%;
+  text-transform: capitalize;
 }
 
 .card-descr {
@@ -29,6 +39,7 @@
   font-weight: 500;
   line-height: 27px;
   letter-spacing: 0%;
+  cursor: default;
 }
 
 .details_link {
@@ -38,6 +49,7 @@
   color: var(--dark-moss-green);
   text-decoration: none;
   position: relative;
+  margin-bottom: 10px;
 }
 
 .details_link::after {
@@ -63,7 +75,8 @@
 .price-container {
   display: flex;
   align-items: center;
-  justify-content: space-between
+  justify-content: space-between;
+  margin-top: auto;
 }
 
 .price-old {
@@ -73,7 +86,12 @@
 }
 
 .price-new {
-  font-size: 24px;
+  font-size: 28px;
   color: #e74c3c;
   font-weight: bold;
+}
+
+.price-old,
+.price-new {
+  cursor: default;
 }
