--- a/src/pages/detailedProductPage/DetailedProductPage.css
+++ b/src/pages/detailedProductPage/DetailedProductPage.css
@@ -18,10 +18,6 @@
   border-radius: 12px;
 }
 
-/* .detail_image_wrapper {
-  width: 40%;
-} */
-
 .detail_image {
   min-width: 250px;
   max-width: 45%;
@@ -29,7 +25,7 @@
 }
 
 .detail_product_info {
-  padding: 2%;
+  padding: 5%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -72,6 +68,12 @@
   color: var(--error-message-color);
 }
 
+@media (max-width: 920px) {
+  .detail_price_wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+}
 
 @media (max-width: 670px) {
   .detail_product_wrapper {
