--- a/src/components/UserProfile/Modal.css
+++ b/src/components/UserProfile/Modal.css
@@ -54,6 +54,11 @@
   justify-content: center;
 }
 
+.fieldset .show_password_input {
+width: 30px;
+margin: 0 30px 0 10px;
+}
+
 .edit-address-button {
   font-size: smaller;
   width: 100px;
@@ -86,4 +91,18 @@
 
 .modal_button-wrapper {
   margin-top: 5px;
+}
+
+.password-modal_form {
+  gap: 10px;
+}
+
+.modal_password-wrapper {
+display: flex;
+flex-direction: column;
+gap: 5px;
+}
+
+.change-password-button {
+  margin: 20px auto;
 }
