--- a/src/components/Catalog/Breadcrumbs/Breadcrumbs.css
+++ b/src/components/Catalog/Breadcrumbs/Breadcrumbs.css
@@ -1,6 +1,9 @@
 .breadcrumb {
   list-style-type: none;
-  padding: 0;
+  padding: 30px 0 0 30px;
+  margin: 0;
+  background-color: var(--cambridge-blue);
+  color: #fff;
 }
 
 .breadcrumb-item {
@@ -9,4 +12,8 @@
   cursor: pointer;
   text-decoration: none;
   font-size: 18px;
+}
+
+.breadcrumb-item:hover {
+  text-decoration: underline;
 }
