--- a/src/pages/detailedProductPage/DetailedProductPage.css
+++ b/src/pages/detailedProductPage/DetailedProductPage.css
@@ -68,6 +68,16 @@
   color: var(--error-message-color);
 }
 
+.swiper-slide img {
+  width: 100%;
+  border-radius: 12px;
+ }
+
+ .swiper-wrapper {
+  max-width: 400px;
+  min-width: 300px;
+ }
+
 @media (max-width: 920px) {
   .detail_price_wrapper {
     flex-direction: column;
