feat: chenge default styles

--- a/src/pages/detailedProductPage/DetailedProductPage.css
+++ b/src/pages/detailedProductPage/DetailedProductPage.css
@@ -76,7 +76,18 @@
  .swiper-wrapper {
   max-width: 400px;
   min-width: 300px;
+  max-height: 500px;
  }
+
+ .swiper-button-next::after,
+ .swiper-button-prev::after {
+  color: var(--dark-moss-green);
+ }
+
+ .swiper-pagination-bullets span {
+  background-color: var(--dark-moss-green);
+ }
+
 
 @media (max-width: 920px) {
   .detail_price_wrapper {
