--- a/src/pages/detailedProductPage/DetailedProductPage.css
+++ b/src/pages/detailedProductPage/DetailedProductPage.css
@@ -84,8 +84,8 @@
   color: var(--dark-moss-green);
  }
 
- .swiper-pagination-bullets span {
-  background-color: var(--dark-moss-green);
+ .swiper-pagination * {
+  color: var(--dark-moss-green);
  }
 
 
