Feat/implement an image slider RSS-ECOMM-3_10 (#86)
* feat: implement slider

* feat: chenge default styles

* feat: add zoom, fraction pagination

--- a/src/pages/detailedProductPage/DetailedProductPage.css
+++ b/src/pages/detailedProductPage/DetailedProductPage.css
@@ -68,6 +68,27 @@
   color: var(--error-message-color);
 }
 
+.swiper-slide img {
+  width: 100%;
+  border-radius: 12px;
+ }
+
+ .swiper-wrapper {
+  max-width: 400px;
+  min-width: 300px;
+  max-height: 500px;
+ }
+
+ .swiper-button-next::after,
+ .swiper-button-prev::after {
+  color: var(--dark-moss-green);
+ }
+
+ .swiper-pagination * {
+  color: var(--dark-moss-green);
+ }
+
+
 @media (max-width: 920px) {
   .detail_price_wrapper {
     flex-direction: column;
