--- a/src/pages/catalog/CatalogPage.css
+++ b/src/pages/catalog/CatalogPage.css
@@ -6,11 +6,12 @@
 
 .main-content {
   width: 100%;
-  padding: 30px;
+  padding: 20px;
 }
 
 .settings-container {
   display: flex;
-  gap: 30px;
+  column-gap: 30px;
   flex-wrap: wrap;
+  margin-bottom: 20px;
 }
