--- a/src/components/modals/Modal.css
+++ b/src/components/modals/Modal.css
@@ -106,6 +106,23 @@
 .change-password-button {
   margin: 20px auto;
 }
+
+/* Detailed slider */
+
+.modal-container.detailed {
+  width: min-content;
+  max-width: 80%;
+  background-color: inherit;
+}
+
+.button.buttonX.detailed {
+  position: relative;
+  top: 80px;
+  z-index: 1000;
+  right: 25px;
+}
+
+
 @media (max-width: 550px) {
   .modal-container {
     width: 80%;
