--- a/src/components/Catalog/CategorySidebar/CategorySidebar.css
+++ b/src/components/Catalog/CategorySidebar/CategorySidebar.css
@@ -13,7 +13,6 @@
 }
 
 .sidebar-title {
-  margin-bottom: 10px;
   font-size: 24px;
   font-weight: 500;
   line-height: 24px;
@@ -58,4 +57,34 @@
 
 .subcategory {
   padding-left: 30px;
+}
+
+@media screen and (max-width: 758px) {
+  .category-sidebar {
+    position: relative;
+    margin: 0;
+    top: 0;
+    text-align: center;
+    max-height: fit-content;
+    margin: 10px 0;
+    padding: 20px 0;
+    border-radius: 0;
+  }
+
+  .sidebar-title {
+    margin-top: 0;
+    margin-bottom: 10px;
+  }
+
+  .category-item {
+    padding: 5px;
+    border-radius: 0;
+    width: 100%;
+  }
+
+  .category-item:hover {
+    font-weight: normal;
+    transform: scale(1);
+  }
+
 }
