--- a/src/components/Catalog/ProductList/ProductList.css
+++ b/src/components/Catalog/ProductList/ProductList.css
@@ -5,3 +5,9 @@
   flex-wrap: wrap;
   gap: 30px;
 }
+
+@media screen and (max-width: 950px) {
+  .products-container {
+    justify-content: center;
+  }
+}
