--- a/src/components/Catalog/Search/Search.css
+++ b/src/components/Catalog/Search/Search.css
@@ -31,3 +31,13 @@
   color: #fff;
   font-size: 24px;
 }
+
+@media screen and (max-width: 400px) {
+  .search-input {
+    width: 180px;
+  }
+
+  .search-button {
+    padding: 10px;
+  }
+}
