--- a/src/pages/detailedProductPage/DetailedProductPage.css
+++ b/src/pages/detailedProductPage/DetailedProductPage.css
@@ -10,7 +10,6 @@
 
 .detail_product_wrapper {
   max-width: 90%;
-  padding: 2%;
   display: flex;
   justify-content: space-around;
   align-items: stretch;
@@ -67,6 +66,12 @@
 .disc_price_wrapper {
   color: var(--error-message-color);
 }
+
+.zoomed_in {
+  cursor: zoom-in;
+}
+
+/* Swiper */
 
 .swiper-slide img {
   width: 100%;
