Feat/add skeleton component to detailed page, fix images styles (#94)
* feat: implement spinner

* fix: chenge pruduct images styles

* fix: change slider styles

--- a/src/pages/detailedProductPage/DetailedProductPage.css
+++ b/src/pages/detailedProductPage/DetailedProductPage.css
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: #fff;
+  background-color: var(--background-color);
 }
 
 .detail_product_wrapper {
@@ -20,7 +20,13 @@
 .detail_image {
   min-width: 250px;
   max-width: 45%;
+  max-height: 80vh;
   border-radius: 12px;
+}
+
+.detail_image.extended_image {
+  min-width: 50%;
+  max-width: 450px;
 }
 
 .detail_product_info {
@@ -43,6 +49,7 @@
 .detail_price_wrapper {
   width: 100%;
   display: flex;
+  gap: 2%;
   justify-content: space-between;
   align-items: center;
 }
@@ -73,15 +80,14 @@
 
 /* Swiper */
 
-.swiper-slide img {
-  width: 100%;
+.swiper {
+  max-width: 450px;
+  max-height: 600px;
   border-radius: 12px;
- }
+}
 
- .swiper-wrapper {
-  max-width: 400px;
-  min-width: 300px;
-  max-height: 500px;
+.swiper-slide img {
+  border-radius: 12px;
  }
 
  .swiper-button-next::after,
@@ -94,7 +100,7 @@
  }
 
 
-@media (max-width: 920px) {
+@media (max-width: 940px) {
   .detail_price_wrapper {
     flex-direction: column;
     align-items: center;
@@ -105,5 +111,24 @@
   .detail_product_wrapper {
     flex-direction: column;
     align-items: center;
+  }
+
+  .detail_product_header {
+    font-size: 28px;
+  }
+
+  .swiper {
+    max-width: 350px;
+  }
+}
+
+@media (max-width: 420px) {
+
+  .detail_product_header {
+    font-size: 24px;
+  }
+
+  .swiper {
+    max-width: 300px;
   }
 }
