--- a/src/pages/detailedProductPage/DetailedProductPage.css
+++ b/src/pages/detailedProductPage/DetailedProductPage.css
@@ -81,6 +81,11 @@
   background-color: var(--fern-green);
 }
 
+.add_product_button:disabled {
+  pointer-events: none;
+  background-color: var(--dark-moss-green);
+}
+
 .add_product_button::after {
   content: '';
   display: block;
