--- a/src/pages/catalog/CatalogPage.css
+++ b/src/pages/catalog/CatalogPage.css
@@ -7,6 +7,10 @@
 .main-content {
   width: 100%;
   padding: 20px;
+  min-height: calc(100vh - 200px);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .settings-container {
@@ -14,6 +18,30 @@
   gap: 30px;
   flex-wrap: wrap;
   margin-bottom: 20px;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 20px;
+  gap: 10px;
+}
+
+.pagination-button {
+  width: 40px;
+  height: 40px;
+  border: none;
+  background-color: var(--silver);
+  color: #000;
+  cursor: pointer;
+  transition: all .3s ease-in-out;
+}
+
+.pagination-button.active {
+  background-color: var(--dark-moss-green);
+  border-radius: 50%;
+  color: #fff;
 }
 
 @media screen and (max-width: 758px) {
