feat: RSS-ECOMM-4_11 implement modifying product quantity (#110)
* feat: RSS-ECOMM-4_11 implement modifying product quantity

* feat: add style to disabled button

--- a/src/components/Cart/ListItem.css
+++ b/src/components/Cart/ListItem.css
@@ -25,3 +25,8 @@
 .strike-through {
   text-decoration: line-through;
 }
+
+.disabled {
+  pointer-events: none;
+  background-color: var(--fern-green);
+}
