feat: RSS-ECOMM-4_23 add cart link to header

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -111,6 +111,10 @@
   background-repeat: no-repeat;
 }
 
+.cart-link {
+  background-image: url(../../assets/icons/shopping-cart.png);
+}
+
 .loggedin-container {
   display: flex;
   gap: 10px;
