--- a/src/components/Catalog/ProductCard/ProductCard.css
+++ b/src/components/Catalog/ProductCard/ProductCard.css
@@ -113,6 +113,12 @@
   cursor: pointer;
 }
 
+.add-to-cart-button:disabled {
+  cursor: default;
+  background-color: var(--cambridge-blue);
+  opacity: 0.7;
+}
+
 .added-to-cart {
   text-align: center;
   cursor: default;
