--- a/src/components/Cart/ListItem.css
+++ b/src/components/Cart/ListItem.css
@@ -30,3 +30,22 @@
   pointer-events: none;
   background-color: var(--fern-green);
 }
+
+.cart_delete-button {
+  background-color: transparent;
+  background-image: url(../../assets/icons/delete.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.cart_delete-button:hover {
+  background-color: transparent;
+}
+
+.quantity-container {
+  display: grid;
+  grid-template-columns: 4fr 1fr 1fr 1fr 1fr;
+  justify-items: center;
+  align-items: center;
+}
