--- a/src/components/modals/Modal.css
+++ b/src/components/modals/Modal.css
@@ -124,6 +124,12 @@
   right: 25px;
 }
 
+.clear-cart-h2 {
+  text-align: center;
+  margin-bottom: 20px;
+  color: var(--dark-moss-green);
+}
+
 
 @media (max-width: 550px) {
   .modal-container {
