--- a/src/pages/detailedProductPage/DetailedProductPage.css
+++ b/src/pages/detailedProductPage/DetailedProductPage.css
@@ -67,6 +67,9 @@
 
 .full_price_wrapper {
   color: var(--dark-moss-green);
+}
+
+.crossed {
   text-decoration: line-through;
 }
 
@@ -74,14 +77,15 @@
   color: var(--error-message-color);
 }
 
-.add_product_button {
+.control_product_button {
+  width: 235px;
   height: 45px;
   position: relative;
   text-align: left;
   background-color: var(--fern-green);
 }
 
-.add_product_button::after {
+.control_product_button::after {
   content: '';
   display: block;
   position: absolute;
