--- a/src/pages/aboutUsPage/AboutUsPage.css
+++ b/src/pages/aboutUsPage/AboutUsPage.css
@@ -31,10 +31,15 @@
   flex-wrap: wrap;
   gap: 30px;
   justify-content: center;
+  height: 100%;
 }
 
 .team-member {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 800px;
   max-width: 300px;
   margin: 20px;
   padding: 20px;
@@ -54,6 +59,7 @@
   height: 100px;
   border-radius: 50%;
   object-fit: cover;
+  margin: 0 auto;
 }
 
 .team-member-title {
@@ -100,6 +106,8 @@
   text-decoration: none;
   border-radius: 5px;
   transition: background-color 0.3s ease;
+  /* align-self: flex-end; */
+  margin-top: auto;
 }
 
 .team-member-github:hover {
