feat: add button disabling, fix removing product logic

--- a/src/pages/detailedProductPage/DetailedProductPage.css
+++ b/src/pages/detailedProductPage/DetailedProductPage.css
@@ -99,6 +99,11 @@
   background-size: contain;
 }
 
+.control_product_button:disabled {
+  pointer-events: none;
+  background-color: var(--cambridge-blue) ;
+}
+
 .zoomed_in {
   cursor: zoom-in;
 }
