--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -62,6 +62,10 @@
 
 @media screen and (max-width: 560px) {
 
+  .hero {
+    height: 60vh;
+  }
+
   .hero-title {
     font-size: 40px;
     line-height: 60px;
