--- a/src/pages/detailedProductPage/DetailedProductPage.css
+++ b/src/pages/detailedProductPage/DetailedProductPage.css
@@ -30,14 +30,23 @@
 }
 
 .detail_product_info {
-  padding: 5%;
+  padding: 2%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  gap: 15px;
+}
+
+.catalog_link {
+  width: 100%;
+  text-align: right;
+  text-decoration: none;
+  color: black;
 }
 
 .detail_product_header {
+  margin: 0;
   color: var(--dark-moss-green);
 }
 
@@ -47,7 +56,7 @@
 }
 
 .detail_price_wrapper {
-  width: 100%;
+  width: 80%;
   display: flex;
   gap: 2%;
   justify-content: space-between;
@@ -69,7 +78,7 @@
   color: var(--dark-moss-green);
 }
 
-.crossed {
+.full_price_wrapper.crossed {
   text-decoration: line-through;
 }
 
@@ -128,14 +137,6 @@
  .swiper-pagination * {
   color: var(--dark-moss-green);
  }
-
-
-@media (max-width: 940px) {
-  .detail_price_wrapper {
-    flex-direction: column;
-    align-items: center;
-  }
-}
 
 @media (max-width: 670px) {
   .detail_product_wrapper {
