--- a/src/pages/detailedProductPage/DetailedProductPage.css
+++ b/src/pages/detailedProductPage/DetailedProductPage.css
@@ -30,14 +30,28 @@
 }
 
 .detail_product_info {
-  padding: 5%;
+  padding: 2%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  gap: 15px;
+}
+
+.catalog_link {
+  width: 100%;
+  text-align: right;
+  text-decoration: none;
+  color: black;
+  transition: 0.3s;
+}
+
+.catalog_link:hover {
+  transform: scale(1.1);
 }
 
 .detail_product_header {
+  margin: 0;
   color: var(--dark-moss-green);
 }
 
@@ -49,8 +63,8 @@
 .detail_price_wrapper {
   width: 100%;
   display: flex;
-  gap: 2%;
-  justify-content: space-between;
+  gap: 5%;
+  justify-content: flex-end;
   align-items: center;
 }
 
@@ -69,7 +83,7 @@
   color: var(--dark-moss-green);
 }
 
-.crossed {
+.full_price_wrapper.crossed {
   text-decoration: line-through;
 }
 
@@ -99,6 +113,11 @@
   background-size: contain;
 }
 
+.control_product_button:disabled {
+  pointer-events: none;
+  background-color: var(--cambridge-blue) ;
+}
+
 .zoomed_in {
   cursor: zoom-in;
 }
@@ -123,14 +142,6 @@
  .swiper-pagination * {
   color: var(--dark-moss-green);
  }
-
-
-@media (max-width: 940px) {
-  .detail_price_wrapper {
-    flex-direction: column;
-    align-items: center;
-  }
-}
 
 @media (max-width: 670px) {
   .detail_product_wrapper {
