--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -141,9 +141,27 @@
   background-image: url(../../assets/icons/shopping-cart.png);
 }
 
+.cart-link-container {
+  position: relative;
+}
+
 .loggedin-container {
   display: flex;
   gap: 10px;
+}
+
+.quantity-indicator {
+  background-color: var(--silver);
+  border-radius: 100%;
+  width: 20px;
+  height: 20px;
+  font-size: 14px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 5px;
+  right: -5px;
 }
 
 @media screen and (max-width: 925px) {
