--- a/src/pages/basket/BasketPage.css
+++ b/src/pages/basket/BasketPage.css
@@ -24,12 +24,18 @@
 } */
 
 .cart-buttons-container {
-display: flex;
-justify-content: space-between;
-margin: 20px 0;
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0;
 }
 
 .promo-container {
-display: flex;
-gap: 20px;
+  display: flex;
+  gap: 20px;
+}
+
+.empty-cart {
+  margin-top: 40px;
+  font-size: x-large;
+  text-align: center;
 }
