--- a/src/pages/aboutUsPage/AboutUsPage.css
+++ b/src/pages/aboutUsPage/AboutUsPage.css
@@ -40,7 +40,8 @@
   flex-direction: column;
   justify-content: space-between;
   height: 800px;
-  max-width: 300px;
+  max-width: 350px;
+  min-width: 280px;
   margin: 20px;
   padding: 20px;
   text-align: center;
