--- a/src/pages/aboutUsPage/AboutUsPage.css
+++ b/src/pages/aboutUsPage/AboutUsPage.css
@@ -40,7 +40,8 @@
   flex-direction: column;
   justify-content: space-between;
   height: 800px;
-  max-width: 300px;
+  max-width: 350px;
+  min-width: 280px;
   margin: 20px;
   padding: 20px;
   text-align: center;
@@ -106,10 +107,25 @@
   text-decoration: none;
   border-radius: 5px;
   transition: background-color 0.3s ease;
-  /* align-self: flex-end; */
   margin-top: auto;
 }
 
 .team-member-github:hover {
   background-color: var(--fern-green);
+}
+
+.rs-school-logo {
+  background-image: url('../../assets/icons/rsschool-logo.svg');
+  width: 140px;
+  height: 55px;
+  background-repeat: no-repeat;
+  cursor: pointer;
+  margin: 0 auto;
+}
+
+.rs-school-info {
+  text-align: center;
+  margin-top: 40px;
+  color: #fff;
+  font-size: 16px;
 }
