feat: adapt cart page for mobiles

--- a/src/components/Cart/ListItem.css
+++ b/src/components/Cart/ListItem.css
@@ -13,6 +13,7 @@
 .prices {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  gap: 5px;
 }
 
 .cart_item-image {
@@ -54,4 +55,59 @@
   grid-template-columns: 4fr 1fr 1fr 1fr 1fr;
   justify-items: center;
   align-items: center;
+}
+
+@media (max-width: 865px) {
+.cart-item {
+  grid-template-columns: 120px 1fr;
+  grid-template-areas:
+    'img a'
+    'img b'
+    'img c';
+  gap: 20px;
+}
+
+.cart_item-image {
+  grid-area: img;
+}
+
+.quantity-container {
+grid-area: b;
+display: flex;
+justify-content: end;
+gap: 10px;
+
+}
+.prices {
+grid-area: c;
+}
+
+.item-name {
+grid-area: a;
+font-weight: 700;
+}
+
+}
+
+
+@media (max-width: 550px) {
+.cart-item {
+  grid-template-areas:
+    'img a'
+    'b b'
+    'c c';
+  gap: 10px;
+  row-gap: 20px;
+}
+}
+
+@media (max-width: 370px) {
+
+.cart_delete-button {
+padding: 0;
+}
+
+.cart_item-button {
+margin: 0;
+}
 }
