--- a/src/pages/basket/BasketPage.css
+++ b/src/pages/basket/BasketPage.css
@@ -39,3 +39,17 @@
   font-size: x-large;
   text-align: center;
 }
+
+@media (max-width: 865px) {
+.cart-buttons-container {
+flex-direction: column;
+gap: 20px;
+}
+}
+
+@media (max-width: 370px) {
+.promo-input {
+min-width: 150px;
+}
+
+}
